--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
   },
   "dependencies": {
     "@pixi-essentials/cull": "2.0.0",
+    "@pixi/mesh-extras": "^7.4.2",
     "@pixi/ui": "^1.0.1",
     "d3": "7.8.5",
     "date-fns": "3.6.0",
